$Id: CHANGELOG.txt,v 1.31 2006/03/07 00:05:56 gregluck Exp $

<release version="1.1" date="2008-10-20" desc="Maintenance release of JGroups Replication">

    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="add">
        Separated JGroups into its own ehcache-jgroupsreplication module and distribution.
    </action>
    <action dev="Greg Luck" type="add">
        Pure Maven build.
    </action>
    <action dev="Greg Luck" type="update">
        Significant performance improvements to the replicator. Applied fixes made to some bottlenecks
        in the RMI replicator to the JGroups replicator.
    </action>
</release>
<release version="1.0" date="2008-7-12" desc="Initial release of JGroups">

    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="add">
        Initial release of JGroups. Released in the ehcache core maven module and distribution.
    </action>

</release>
