@@ -9,14 +9,14 @@
     <groupId>net.sf.ehcache</groupId>
     <artifactId>ehcache-jgroupsreplication</artifactId>
     <name>JGroups Replication</name>
-    <version>1.1</version>
+    <version>1.2</version>
     <packaging>jar</packaging>
     <description>This module provides replication via JGroups</description>
     <dependencies>
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>ehcache</artifactId>
-            <version>1.6.0-beta1</version>
+            <version>1.6.0-beta2</version>
         </dependency>
         <dependency>
             <groupId>jgroups</groupId>
@@ -98,7 +98,6 @@
             <url>scp://web.sourceforge.net:/home/groups/e/eh/ehcache/htdocs</url>
         </site>
     </distributionManagement>
-
 </project>
 
         
